# bigquery-storage

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: client.rs  lib.rs  read.rs
