[package]
name = "bigquery-storage"
version = "0.1.0"
authors = ["Open-Source <opensource@openquery.io>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "arrow" ]

[build-dependencies]
tonic-build = "0.2.0"

[dev-dependencies]
tokio = { version = "0.2.20" }

[dependencies]
futures = "0.3"
tonic = { version = "0.2.0", features = ["transport", "tls", "tls-roots"] }
prost = "0.6.1"
prost-types = "0.6.1"

yup-oauth2 = { version = "4.1.2" }
hyper = { version = "0.13.5" }

arrow = { version = "0.16.0", optional = true }
#derive_more = "0.99.0"

#futures_01 = { package = "futures", version = "=0.1.29" }
#hyper = { package = "hyper", version = "0.12.27" }
